Fixed word wrapping in error messages. Fixed moving cursor over marked errors in code editor

--- a/frontend/src/components/playground/Events.less
+++ b/frontend/src/components/playground/Events.less
@@ -2,6 +2,7 @@
 
 .result-block {
   font-family: @codeFont;
+  word-wrap: break-word;
 }
 
 .line-number {
@@ -12,6 +13,7 @@
   margin-right: .5em;
   -webkit-user-select: none;
   font-weight: bold;
+  word-wrap: normal;
 }
 
 
@@ -21,5 +23,4 @@
 
 .stacktrace {
   color: @accentColor;
-  overflow-wrap: break-word;
 }
