--- a/frontend/src/components/playground/PlaygroundView.less
+++ b/frontend/src/components/playground/PlaygroundView.less
@@ -109,7 +109,7 @@
 
 .error-marked {
   border-bottom: 1px @dangerColor solid;
-  color: @dangerColor;
+  color: @dangerColor !important;
   transition: all 2s ease-in-out;
 }
 
@@ -125,7 +125,7 @@
   color: @dangerColor;
 }
 
-.errorLine {
+.error-line {
   tab-size: 2;
-  white-space: pre;
+  white-space: pre-wrap;
 }
